--- a/TrayDirLite/TrayDirLite.csproj
+++ b/TrayDirLite/TrayDirLite.csproj
@@ -296,6 +296,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Resources\TrayDirLite.chm" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
